# Example of customizing binaries in Cargo.toml.
[package]
name = "titan_os"
version = "0.1.0"
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version =  "0.9.23", features = ["map_physical_memory"] } 
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.4"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
bit_field = "0.10.1"
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
[dependencies.conquer-once]
version = "0.2.0"
default-features = false
[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",  "-display", "none"]
test-success-exit-code = 33
